--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: libminer
-Title: What the Package Does (One Line, Title Case)
+Title: Examine your R libraries!
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Aayushi", "Verma", , "theawesomecosmos@gmail.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0003-2396-4569"))
+Description: Provides utility functions for inspecting and examining your local R package installations.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
